--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,9 @@ body {
     background-image: url('/bg.png');
     margin: 0;    
 }
+.tcell {
+    @apply border-b border-white py-2;
+}
+.rowColor {
+    @apply odd:bg-gray-300 even:bg-gray-100
+}
